updated home on 10/6/2024

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="login.html">Login/Signup</a></li>
+                <li><a href="dashboard.html">Rental Portal</a></li>
+                <li><a href="profile.html">Profile Settings</a></li>
+                <li><a href="contactForm.html">Support</a></li>
             </ul>
         </nav>
     </header>
@@ -26,19 +28,25 @@
             <h2>What makes us special</h2>
             <ul>
                 <li>
-                    <img src="pngimg" alt="Unique homes">
-                    <h3>Unique homes</h3>
-                    <p>From cozy apartments to spacious villas</p>
+                    <div class="icon">
+                        <img src="img/unique-home.jpg" alt="Unique homes">
+                        <h3>Unique homes</h3>
+                        <p>From cozy apartments to spacious villas</p>
+                    </div>
                 </li>
                 <li>
-                    <img src="pngimg" alt="Local experiences">
-                    <h3>Local experiences</h3>
-                    <p>Immerse yourself in the local culture</p>
+                    <div class="icon">
+                        <img src="img/local_culture.jpg" alt="Local experiences">
+                        <h3>Local experiences</h3>
+                        <p>Immerse yourself in the local culture</p>
+                    </div>
                 </li>
                 <li>
-                    <img src="pngimg" alt="options">
-                    <h3> options</h3>
-                    <p>Bring your friends along</p>
+                    <div class="icon">
+                        <img src="img/options.jpg" alt="options">
+                        <h3>Options</h3>
+                        <p>Bring your friends along</p>
+                    </div>
                 </li>
             </ul>
         </section>
@@ -47,8 +55,9 @@
             <button>Sign up</button>
         </section>
     </main>
+    <!-- Footer Section -->
     <footer>
-        <p></p>
+        <p>&copy; 2024 Residential Rentals. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
