--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section class="hero">
             <h1>Find your dream home</h1>
-            <p>Explore our collection of unique homes and experiences</p>
+            <p>Most rental websites, like those for short-term and long-term house leases, have set prices that can't be changed. Many people who want to rent may not be able to because of the rigid pricing system. This is especially true for people from low-income families or people who need a place to live quickly. In the same way, property owners may miss out on rental possibilities because they can't change their prices instantly based on demand and what renters want. The project's goal is to make a website that lets people renting homes negotiate prices on the fly. We want to make renting easier for people who are limited by money by adding a real-time negotiation tool. This will let them get properties that they might not be able to get otherwise. This feature will also help property owners because it will make it more likely that their homes will be rented quickly and easily, meeting last-minute needs, and getting the most usage. </p>
             <button>Search</button>
         </section>
         <section class="features">
